--- a/index.html
+++ b/index.html
@@ -44,17 +44,6 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-
-    <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','../www.google-analytics.com/analytics.js','ga');
-
-        ga('create', 'UA-104508594-1', 'auto');
-        ga('send', 'pageview');
-
-    </script>
 </head>
 
 <body >
@@ -254,7 +243,7 @@ Our counter will allow you to easily add to the screen of your <strong>livestrea
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-<script src="../ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+<script src="js/jquery.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/odometer.min.js"></script>
 <script src="js/bootstrap-notify.min.js"></script>
